--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,8 @@
-@import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@100..1000");
 
 :root {
   --background: #ffffff;
+  --input-bg: rgb(226, 226, 226);
   --foreground: #171717;
 }
 
@@ -23,4 +24,17 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+input,
+textarea {
+  padding: 10px;
+  font-size: 16px;
+  font-family: "DM Sans", sans-serif;
+  background: var(--input-bg);
+  border: none;
+  color: var(--foreground);
+  outline: none;
+  width: 100%;
+  cursor: pointer;
 }
