--- a/app/globals.css
+++ b/app/globals.css
@@ -21,9 +21,13 @@ body {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   background: var(--light);
   color: var(--dark);
   font-family: "Ysabeau Infant", sans-serif;
+  font-size: 20px;
 }
 
 h1,
@@ -38,6 +42,11 @@ a {
   text-decoration: none;
 }
 
+p {
+  padding: 0;
+  margin: 0;
+}
+
 button,
 input,
 textarea {
@@ -49,6 +58,16 @@ textarea {
   cursor: pointer;
 }
 
+button {
+  font-size: 20px;
+  padding: 5px 30px;
+}
+
+button.red.outline {
+  border: 1px solid var(--accent-1);
+  color: var(--accent-1);
+}
+
 input,
 textarea {
   padding: 10px;
@@ -56,8 +75,6 @@ textarea {
 
   background: var(--input-bg);
   border: 1px solid var(--dark);
-
-  width: 100%;
 }
 
 .header {
@@ -102,4 +119,133 @@ textarea {
   position: relative;
   width: 43px;
   height: 43px;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  height: 100%;
+
+  padding: 30px 200px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
+.add-buttons {
+  display: flex;
+  gap: 20px;
+  justify-content: flex-end;
+  align-self: flex-end;
+  padding: 0px 10px;
+}
+
+.font-list {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 30px;
+}
+
+@media (width < 1728px) {
+  .font-list {
+    display: grid;
+    grid-template-columns: auto;
+    gap: 30px;
+  }
+}
+
+.font-card {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+
+  width: 629px;
+  height: fit-content;
+
+  padding: 10px;
+}
+
+.font-name-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.font-name {
+  background: var(--dark-red);
+  color: var(--light);
+  width: fit-content;
+  padding: 2px 10px;
+  border-top-right-radius: 10px;
+  font-family: "Ysabeau SC", sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.line {
+  width: 100%;
+  height: 1px;
+  background: var(--dark-red);
+}
+
+.font-completion {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.search {
+  display: flex;
+  width: 100%;
+  max-width: 1308px;
+  gap: 60px;
+  padding: 0px 10px;
+  justify-content: space-between;
+}
+
+input[type="search"] {
+  width: 100%;
+  font-size: 20px;
+  display: flex;
+  border: 1px solid var(--dark-red);
+}
+input[type="search"]::placeholder {
+  color: var(--dark-gray);
+  font-style: italic;
+}
+
+progress {
+  border-radius: 0px;
+  height: 20px;
+  width: 245px;
+}
+
+progress::-webkit-progress-bar {
+  background-color: var(--light-gray);
+}
+
+progress::-webkit-progress-value {
+  background-color: var(--accent-1);
+}
+
+progress::-webkit-progress-value.complete {
+  background-color: var(--accent-2);
+}
+
+.sort {
+  display: flex;
+  flex-direction: column;
+}
+.sort-label {
+  color: var(--dark-red);
+  font-size: 16px;
+  font-weight: bold;
+  font-family: "Ysabeau SC", sans-serif;
+}
+.sort-category {
+  font-size: 20px;
 }
